    
2007-04-15  Pascal Terjan  <pterjan@linuxfr.org>

	* gedit/gedit-document-saver.c: Don't fail when we cannot change
	rights on the backup file if it was not needed (e.g. on FAT).
	Bug #427548

=== gedit 2.18.1 ===

2007-04-10  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.18.1 released

2007-03-24  Paolo Borelli  <pborelli@katamail.com>

	* gedit/dialogs/gedit-close-confirmation-dialog.c: escape
	gmarkup in document name. Bug #422228.

2007-03-24  Paolo Maggi  <paolo@gnome.org>

	* plugins/taglist/Makefile.am: call gzip with "--best -f" args
	* plugins/taglist/gedit-taglist-plugin-parser.c
	(parse_taglist_dir): fix a little bug when searching for .tags.gz
	files
	
	Total size of tags files is now 540K

2007-03-21  Steve Frécinaux  <code@istique.net>

	* configure.ac: add AC_PATH_PROG for gzip.

	* plugins/taglist/gedit-taglist-plugin-parser.c: take advantage of
	libxml built-in gzip support.

	* plugins/taglist/Makefile.am: generate gzip'ed tag files.

	Total size of tags files felt from 6.7M to 560K (~92%)

2007-03-21  Steve Frécinaux  <code@istique.net>

	* plugins/taglist/HTML.tags.xml.in:
	* plugins/taglist/Latex.tags.xml.in:
	* plugins/taglist/XSLT.tags.xml.in:
	* plugins/taglist/XUL.tags.xml.in:

	Set gedit namespace as the default namespace, and rework indentation.
	This doesn't change anything for the (libxml-based) Tag list plugin,
	but lowers the total size of the translated XML files from about 9.2M
	to about 6.7M (27%).

2007-03-13  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document-loader.c: clear the buffer when reloading
	an empty file. Fixes #417825.

2007-03-13  Steve Frécinaux  <code@istique.net>

	Bug #415550 – Extra information in the bug-report script.

	* configure.ac: AC_SUBST the enable_python variable in order for the
	report script to know whether python support is activated; bugreport
	script added to AC_OUTPUT.

	* data/gedit-bugreport.sh:
	* data/gedit-bugreport.sh.in:
