@@ -3,5 +3,5 @@ _Name=Build
 _Comment=Run "make" in the document directory
 Input=nothing
 Output=output-panel
-Shortcut=F8
+Shortcut=<Control>F8
 Applicability=local
