@@ -1,3 +1,13 @@
 #!/bin/sh
 
-make
+EHOME=`echo $HOME | sed "s/#/\#/"`
+DIR=$GEDIT_CURRENT_DOCUMENT_DIR
+while test "$DIR" != "/"; do
+	if [ -f "$DIR/Makefile" ]; then
+		echo "Using Makefile from $DIR" | sed "s#$EHOME#~#" > /dev/stderr
+		make -C $DIR
+		exit
+	fi
+	DIR=`dirname $DIR`
+done
+echo "No Makefile found!" > /dev/stderr
